Responsive login and image change design

--- a/src/views/login/Login.module.css
+++ b/src/views/login/Login.module.css
@@ -65,3 +65,17 @@
   font-size: 12px;
   margin-top: 5px;
 }
+
+/* MEDIA QUERIES */
+
+@media (max-width: 504px) {
+  .container-login {
+    padding: 20px;
+    width: auto;
+  }
+
+  .form-login {
+    width: 100%;
+    text-align: center;
+  }
+}
