--- a/src/views/pokemons/Pokemons.module.css
+++ b/src/views/pokemons/Pokemons.module.css
@@ -16,7 +16,7 @@
   display: flex;
   gap: 20px;
   padding: 10px;
-  width: auto;
+  width: 1500px;
   height: 700px;
   margin-top: 200px;
 }
@@ -68,8 +68,15 @@
   padding: 10px;
   cursor: pointer;
   transition: 500ms ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.button-pagination:hover{
-    background-color: rgba(49, 48, 48, 0.89);
+.button-pagination:nth-child(2) > img {
+  transform: rotate(180deg);
+}
+
+.button-pagination:hover {
+  background-color: rgba(49, 48, 48, 0.89);
 }
