--- a/src/views/pokemons/components/map-pokemons/MapPokemons.module.css
+++ b/src/views/pokemons/components/map-pokemons/MapPokemons.module.css
@@ -3,3 +3,11 @@
   height: 100%;
   border-radius: 10px;
 }
+
+/* MEDIA QUERIES */
+@media (max-width: 1559px) {
+  .map {
+    width: 100%;
+    height: 600px;
+  }
+}
