--- a/src/views/pokemons/components/table-pokemons/TablePokemons.module.css
+++ b/src/views/pokemons/components/table-pokemons/TablePokemons.module.css
@@ -21,6 +21,16 @@
   margin-top: 20px;
 }
 
+.card-pokemons {
+  width: 800px;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.card-pokemons * {
+  font-family: "Poppins-Regular";
+}
+
 .button-pagination {
   background-color: black;
   color: white;
@@ -34,10 +44,29 @@
   align-items: center;
 }
 
+.button-pagination-disabled {
+  background-color: rgba(0, 0, 0, 0.534);
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  transition: 500ms ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .button-pagination:nth-child(2) > img {
   transform: rotate(180deg);
 }
 
 .button-pagination:hover {
   background-color: rgba(49, 48, 48, 0.89);
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 889px) {
+  .card-pokemons {
+    width: 100%;
+  }
 }
