--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 @font-face {
   font-family: "Poppins-Regular";
   src: url("/fonts/Poppins-Regular.ttf") format("truetype");
