--- a/src/components/alerts/Alerts.module.css
+++ b/src/components/alerts/Alerts.module.css
@@ -16,7 +16,7 @@
   opacity: 1;
   transform: translateY(0px);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
